--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">test change name</string>
-    <string name="text">Hello Groupe 25 DEC!Hello Groupe 25 DECHello Groupe 25 DECHello Groupe 25 DECHello Groupe 25 DECHello Groupe 25 DECHello Groupe 25 DECHello Groupe 25 DECHello Groupe 25 DECHello Groupe 25 DEC</string>
+    <string name="forget_password"><u>Forget password !</u></string>
+    <string name="register_here"><u>D\'ont have an account ? register here !</u></string>
 </resources>
